# PFC-fee-split

./: .gitignore  AP_LP_setup.sh  AP_LP_setup_phoenix.sh  AP_LP_setup_pisco.sh  CHANGELOG.md  Cargo.toml  README.md  build_arm.sh  justfile  notes.txt  notes_chihuahua.txt  notes_enterprise.txt  notes_harpoon.txt  notes_inj.txt  notes_juno.txt  notes_kaiyo.txt  notes_lunc.txt  notes_migaloo.txt  notes_phoenix.txt
.cargo/: config  config.toml
.github/workflows/: release-artifacts.yml  tests.yml
artifacts/: checksums.txt  pfc_astroport_generator.wasm  pfc_dust_collector_kujira_contract.wasm  pfc_fee_splitter.wasm  pfc_treasurechest_contract.wasm  pfc_vault_contract.wasm
contracts/: README.md
contracts/pfc-astroport-generator/: Cargo.toml
contracts/pfc-astroport-generator/examples/: schema.rs
contracts/pfc-astroport-generator/src/: contract.rs  lib.rs
contracts/pfc-astroport-generator/src/testing/: mock_querier.rs  tests.rs
contracts/pfc-astroport_lp_staker/: Cargo.toml  README.md
contracts/pfc-astroport_lp_staker/examples/: schema.rs
contracts/pfc-astroport_lp_staker/src/: entrypoints.rs  executions.rs  queries.rs  states.rs
contracts/pfc-astroport_lp_staker/src/tests/: bond.rs  instantiate.rs  mod.rs  unbond.rs  update_config.rs  validate.rs  withdraw.rs
contracts/pfc-dust-collector-kujira/: Cargo.toml  README.md
contracts/pfc-dust-collector-kujira/examples/: schema.rs
contracts/pfc-dust-collector-kujira/src/: contract.rs  error.rs  lib.rs  state.rs  test_helpers.rs
contracts/pfc-dust-collector-kujira/src/handler/: exec.rs  query.rs
contracts/pfc-dust-collector-kujira/src/querier/: mod.rs
contracts/pfc-dust-collector-migaloo/: Cargo.toml
contracts/pfc-dust-collector-migaloo/examples/: schema.rs
contracts/pfc-dust-collector-migaloo/schema/: allocation_response.json  ownership_response.json  query_msg.json
contracts/pfc-dust-collector-migaloo/src/: contract.rs  error.rs  lib.rs  state.rs  test_helpers.rs
contracts/pfc-dust-collector-migaloo/src/handler/: exec.rs  query.rs
contracts/pfc-dust-collector-migaloo/src/querier/: mod.rs
contracts/pfc-fee-splitter/: Cargo.toml  README.md
contracts/pfc-fee-splitter/.cargo/: config
contracts/pfc-fee-splitter/examples/: schema.rs
contracts/pfc-fee-splitter/schema/: allocation_response.json  execute_msg.json  gov_contract_response.json  instantiate_msg.json  query_msg.json
contracts/pfc-fee-splitter/src/: contract.rs  error.rs  lib.rs  migrations.rs  state.rs  test_helpers.rs
contracts/pfc-fee-splitter/src/handler/: exec.rs  mod.rs  query.rs
contracts/pfc-treasurechest-contract/: Cargo.toml  README.md
contracts/pfc-treasurechest-contract/examples/: schema_vault_contract.rs
contracts/pfc-treasurechest-contract/src/: contract.rs  executions.rs  lib.rs  queries.rs  state.rs
contracts/pfc-vault-contract/: Cargo.toml  README.md
contracts/pfc-vault-contract/examples/: schema.rs  schema_vault_contract.rs
contracts/pfc-vault-contract/src/: entrypoints.rs  executions.rs  lib.rs  queries.rs  states.rs  utils.rs
contracts/pfc-vault-contract/src/tests/: bond.rs  instantiate.rs  merge.rs  mod.rs  unbond.rs  update_config.rs  withdraw.rs
integration/: Cargo.toml
integration/src/: lib.rs
integration/src/treasurechest/: contract.rs  tests.rs
notes/: AP_LP_setup_phoenix.sh  notes.txt  notes_archway.txt  notes_chihuahua.txt  notes_elgafar.txt  notes_harpoon.txt  notes_inj.txt  notes_juno.txt  notes_migaloo.txt  notes_narwhal.txt  notes_osmosis.txt  notes_phoenix.txt  treasure_chest
schema/: config_response.json  cw20_hook_msg.json  execute_msg.json  instantiate_msg.json  query_msg.json  staker_info_response.json  state_response.json
test_files/: add_allocation.json  add_allocation_narwhal_vault_fail.json  add_allocation_phoenix_vault.json  add_allocation_phoenix_vault_distributor.json  add_allocation_pisco_vault.json  add_allocation_sp.json  archway_instantiate_feesplit.json  chihuahua_instantiate_feesplit.json  elgafar_instantiate_feesplit.json  harpoon_dustcollector_add_stage.json  harpoon_dustcollector_add_stage_2.json  harpoon_instantiate_dustcollector.json  harpoon_instantiate_feesplit.json  inj_instantiate_feesplit.json  juno_instantiate_feesplit.json  kaiyo_instantiate_dustcollector.json  kaiyo_instantiate_feesplit.json  lunc_instantiate.json  migaloo_instantiate_feesplit.json  modify_allocation_migaloo_vault.json  modify_allocation_narwhal_vault_fail.json  modify_allocation_osmo_vault.json  modify_allocation_phoenix_vault.json  narwhal_instantiate_feesplit.json  osmosis_instantiate_feesplit.json  phoenix_instantiate.json  phoenix_instantiate_astroport.json  phoenix_instantiate_vault.json  pisco_instantiate.json  pisco_instantiate_astroport.json  pisco_instantiate_dustcollector.json
test_files/pisco/: treasure.json
