
[workspace]
members = [
    "packages/pfc-astroport_reward_holder",
    "packages/pfc-fee-split",
    "packages/pfc-vault",
    "packages/pfc-whitelist",
    "packages/pfc-whitelist-derive",
    "contracts/pfc-astroport-generator",
    "contracts/pfc-fee-splitter",
    "contracts/pfc-vault-contract"
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[profile.dev]
overflow-checks = true
