[package]

name = "pfc-dust-collector-kujira-contract"
version = { workspace = true }

description = "smart contract to convert dust into a single denom via FIN"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }
rust-version = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library=[]

[dependencies]
cw2 =  { workspace = true }

pfc-fee-split = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = "1.0.1"
kujira = { workspace = true }

schemars = { workspace = true }
serde = { workspace = true }
thiserror =  { workspace = true }
pfc-steak= { workspace = true }
cw-ownable = { workspace = true }
pfc-dust-collector-kujira= { workspace = true }
pfc-whitelist= { workspace = true }

[build-dependencies]
protoc-rust = "2"

[dev-dependencies]
cosmwasm-schema =  { workspace = true }
serde_json = { workspace = true }
convert_case = "0.6.0"
