[package]
name = "pfc-vault-contract"
version = "0.2.9"
authors = ["PFC","Valkyrie Protocol"]
edition = "2021"
description = "modified by PFC. Originally A Staking contract for Valkyrie Protocol - distribute rewards to stakers"
license = "Apache-2.0"
repository = "https://github.com/PFC-Validator/PFC-fee-split"
homepage = "https://PFC.zone"
#documentation = "https://docs.valkyrieprotocol.com"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.0.0" }
#getrandom is here so cw-storage-plus can build on wasm.
getrandom = { version = "0.2", features = ["js"] }
cw-storage-plus = { version = "1.0.0", features = ["iterator"] }
cw2 = "1.0.0"
cw20 = "1.0.0"
cw-controllers = "1.0.0"
pfc-vault = {  path = "../../packages/pfc-vault" }
schemars = { version = "0.8.10" }
serde = { version = "1.0.147", default-features = false, features = ["derive"] }

#serde_json = "1.0.89"
thiserror = "1.0.37"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cosmwasm-storage = { version = "1.1.6", features = ["iterator"] }

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
          --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
            --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
              cosmwasm/rust-optimizer:0.12.10"""
optimize-w32 = """docker run --rm -v c:\\pfc\\fractional\\fee-split:/code  \
            --mount type=volume,source=pfc_fee_splitter_cache,target=/code/target \
            --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
            cosmwasm/rust-optimizer:0.12.10"""
optimize-arm64 = """docker run --rm -v "$(pwd)":/code \
          --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
            --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
              cosmwasm/rust-optimizer-arm64:0.12.10"""