[package]
name = "pfc-vault-contract"
version = { workspace = true }
authors = ["PFC", "Valkyrie Protocol"]
edition = { workspace = true }
description = "modified by PFC. Originally A Staking contract for Valkyrie Protocol - distribute rewards to stakers"
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


#[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { workspace = true }
#getrandom is here so cw-storage-plus can build on wasm.
getrandom = { workspace = true }
#getrandom = { version = "0.2", features = ["js"] }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw-controllers = { workspace = true }
pfc-vault = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
#serde_json = "1.0.89"
thiserror = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-storage = { workspace = true }
